# dbt-mcp-demo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
dbt/: Dockerfile.dbt  Makefile  entrypoint.sh
dbt/dbt-demo-postgres/: .gitignore  CLAUDE.md  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  requirements.txt
dbt/dbt-demo-postgres/.claude/: settings.json
dbt/dbt-demo-postgres/.claude/skills/dbt-mcp-developer/: SKILL.md
dbt/dbt-demo-postgres/.claude/skills/integrity/: SKILL.md
dbt/dbt-demo-postgres/macros/mcp_connector/: get_table_schema.sql  preview_table_data.sql  query_mcp_tool.sql
dbt/dbt-demo-postgres/models/marts/fires/: _models.yml  fct_fires__by_country_municipality.sql  fct_fires__risk_by_municipality.sql
dbt/dbt-demo-postgres/models/staging/fires/: _models.yml  _sources.yml  stg_fires__monthly_fires.sql
dbt/dbt-demo-postgres/tests/fct_fires__by_country_municipality/: acceptance_fct_fires__by_country_municipality.sql
dbt/dbt-demo-postgres/tests/fct_fires__risk_by_municipality/: acceptance_fct_fires__risk_by_municipality.sql
docker/: Dockerfile  docker-compose.yml  history_fires_argentina.csv  history_fires_brasil.csv  history_fires_latam.csv  init.sql
mcp-server/: pyproject.toml
mcp-server/src/: config.py  server.py
mcp-server/src/auth/: middleware.py
mcp-server/src/logic/: database.py  gatekeeper.py
mcp-server/tests/: conftest.py  test_auth.py  test_e2e.py  test_gatekeeper.py  test_server.py
(+6 files in other folders)
