[project]
name = "dbt-demo-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27.1",
    "sqlglot>=30.7.0",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.46.0",  # [standard] adds uvloop + httptools
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]   # makes `from src...` importable when running plain `pytest`

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

